go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: go-app
        image: ghcr.io/jaimindevops/go-app:b7c92baf419a58eb7777ea0ad4590ac9fbf61770
        ports:
        - containerPort: 8080
        env:                     # Added your Redis Env
        - name: REDIS_URL
          value: "redis-service:6379"
        securityContext:         # Kept your Security Fixes
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
