go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  type: NodePort
  selector:
    app: go-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
